--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -6,13 +6,11 @@
 </head>
 
 <body>
-    {% for message in messages %} {{message}} {% endfor %} {% include 'navbar.html' %} {% if form.errors %}
-    <div class="alert alert-danger">
-        {% for field_errors in form.errors.values %} {% for error in field_errors%}
+    <div class="pwd-change-msg">
+        {% for message in messages %} {{message}} {% endfor %} {% include 'navbar.html' %} {% if form.errors %} {% for field_errors in form.errors.values %} {% for error in field_errors%}
         <p>{{ error }}</p>
-        {% endfor %} {% endfor %}
+        {% endfor %} {% endfor %} {% endif %}
     </div>
-    {% endif %}
 
     <div class="mx-auto max-w-screen-xl px-4 py-16 sm:px-6 lg:px-8">
         <div class="mx-auto max-w-lg text-center">
