--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -36,40 +36,40 @@
                                 <div class="py-1">
                                     <div class="border-b flex justify-between items-center">
                                         <span class="block px-4 py-2 text-sm font-medium text-gray-900">{{ user.username }}</span>
-                                        
+
                                     </div>
 
 
                                     <div class="border-t border-gray-100"></div>
                                     <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900 showModal">Change Password</a>
-                                    
-                                        <div class="myModal h-screen w-full fixed z-10 inset-0 overflow-y-auto left-0 top-0  justify-center items-center bg-black bg-opacity-50 hidden">
-                                            <div class="bg-white rounded shadow-lg w-1/3">
-                                                
-                                                <form class="space-y-6" action="#">
-                                                    <div class="p-3">
-                                                        <div>
-                                                            <label for="current-password" class="block mb-2 text-sm font-medium text-black">Current password</label>
-                                                            <input type="password" name="current-password" id="current-password" class="bg-gray-50 border border-gray-300 text-black text-sm rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full p-2.5"  required>
-                                                        </div>
-                                                        <div>
-                                                            <label for="new-password" class="block mb-2 text-sm font-medium text-black ">New password</label>
-                                                            <input type="password" name="new-password" id="new-password"  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full p-2.5" required>
-                                                        </div>
-                                                        <div>
-                                                            <label for="confirm-password" class="block mb-2 text-sm font-medium text-black ">Confirm password</label>
-                                                            <input type="password" name="confirm-password" id="confirm-password"  class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full p-2.5" required>
-                                                        </div>
-                        
+
+                                    <div class="myModal h-screen w-full fixed z-10 inset-0 overflow-y-auto left-0 top-0  justify-center items-center bg-black bg-opacity-50 hidden">
+                                        <div class="bg-white rounded shadow-lg w-1/3">
+
+                                            <form class="space-y-6" method="POST" id="pwd-change-form">
+                                                {% csrf_token %}
+                                                <div class="p-3">
+
+                                                    <div>
+                                                        <label for="new-password" class="block mb-2 text-sm font-medium text-black ">New password</label>
+                                                        <input type="password" name="new-password" id="new-password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full p-2.5" required>
                                                     </div>
-                                                    <div class="flex justify-end items-center w-100 border-t p-3">
-                                                        <button class="bg-gray-400  px-3 py-1 rounded text-white mr-1 closeModal">Cancel</button>
-                                                        <button class="bg-teal-600 hover:bg-teal-700 px-3 py-1 rounded text-white">Submit</button>
+                                                    <div>
+                                                        <label for="confirm-password" class="block mb-2 text-sm font-medium text-black ">Confirm password</label>
+                                                        <input type="password" name="confirm-password" id="confirm-password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-teal-500 focus:border-teal-500 block w-full p-2.5" required>
+                                                        <div id="confirmation-error" class="text-red-500 tex-sm mt-1"></div>
+
                                                     </div>
-                                                </form>
-                                            </div>
+
+                                                </div>
+                                                <div class="flex justify-end items-center w-100 border-t p-3">
+                                                    <button type="button" class="bg-gray-400  px-3 py-1 rounded text-white mr-1 closeModal">Cancel</button>
+                                                    <button class="bg-teal-600 hover:bg-teal-700 px-3 py-1 rounded text-white">Submit</button>
+                                                </div>
+                                            </form>
                                         </div>
-                                    
+                                    </div>
+
                                     <div class="border-t border-gray-100"></div>
                                     <a href="{% url 'logout-page' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-teal-600" role="menuitem">Logout</a>
                                 </div>
@@ -108,6 +108,8 @@
             }
         });
 
+        //This is for change password box.
+
         const myModal = document.querySelector('.myModal');
         const show = document.querySelector('.showModal');
         const close = document.querySelectorAll('.closeModal');
@@ -120,6 +122,23 @@
             element.addEventListener('click', function() {
                 myModal.classList.add('hidden');
             });
+        });
+
+        const pwd_change_form = document.getElementById("pwd-change-form")
+        const confirmation_error = document.getElementById("confirmation-error")
+        pwd_change_form.addEventListener("submit", function() {
+            event.preventDefault();
+            var formData = new FormData(pwd_change_form)
+            var cur_pass = formData.get('current-password')
+            var new_pass = formData.get('new-password')
+            var confirm_pass = formData.get('confirm-password')
+            if (new_pass != confirm_pass) {
+                confirmation_error.textContent = "This does not match your new password."
+            } else if (new_pass.length < 8) {
+                confirmation_error.textContent = "The password is too short. It should be minimum 8 characters."
+            } else {
+                pwd_change_form.submit();
+            }
         });
     </script>
 
